# the-agents-playbook

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  ROADMAP.md  main.py  pyproject.toml
01-basic-calls/: 01-async-httpx.py  02-basic-chat.py  03-structured-output.py  04-tool-choice.py  05-providers.py  06-streaming.py  07-embeddings.py
02-tools/: 01-tool-protocol.py  02-tool-registry.py  03-tool-dispatcher.py  04-built-in-tools.py  05-tool-caching.py  06-mcp-bridge.py
langgraph-examples/: README.md  pyproject.toml  run_all.sh
langgraph-examples/01-basic-calls/: 01_basic_chat.py  02_structured_output.py  03_tool_calling.py  04_streaming.py
langgraph-examples/02-tools/: 01_tool_protocol.py  02_tool_node.py  03_bound_tools.py
langgraph-examples/03-memory/: 01_checkpoint.py  02_thread_history.py  03_long_context.py  04_segmented_memory.py
langgraph-examples/04-state/: 01_typed_state.py  02_reducer_state.py  03_context_layers.py
langgraph-examples/05-the-agent/: 01_simple_graph.py  02_react_agent.py  03_conditional_edges.py  04_tool_chaining.py  05_streaming.py
langgraph-examples/06-human-in-the-loop/: 01_interrupt.py  02_command_resuming.py  03_draft_approval.py
langgraph-examples/07-workflows/: 01_plan_execute.py  02_parallel_nodes.py
langgraph-examples/08-the-claw/: 01_error_edges.py  02_retry_loop.py  03_evaluation.py  04_llm_judge.py
langgraph-examples/09-multi-agent/: 01_supervisor.py  02_parallel_agents.py
langgraph-examples/shared/: __init__.py  compactor.py  embeddings.py  settings.py  vector_store.py  vectors.py
tests/: README.md  (+2 more)
(+175 files in other folders)
