[project]
name = "the-agents-playbook"
version = "0.1.0"
description = "Learn how to build agents with The Agents Playbook, a collection of agent recipes and best practices."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.0",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "respx>=0.23.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing -m 'not openai'"
markers = [
    "openai: integration tests that hit the real API (requires OPENAI_API_KEY in .env)",
]
